<resources>
    <string name="app_name">TravailPratique1-ToupetFlorentin</string>
    <string name="titre_application">Maga Reserv</string>
    <string name="places_restantes">Available seats: %1$d</string>
    <string name="btn_reserver">Reserve a table</string>
    <string name="btn_afficher_reservations">View reservations</string>
    <string name="titre_reservation">Table Reservation</string>
    <string name="nom_restaurant">Restaurant Name:</string>
    <string name="places_restantes2">Seats Reserved: %d</string>
    <string name="date_reservation">Reservation Date:</string>
    <string name="choisir_date">Choose a date</string>
    <string name="nombre_places">Number of reserved seats:</string>
    <string name="progression_places">Progress: %1$d seats</string>
    <string name="choisir_heure">Choose the reservation time:</string>
    <string name="heure_debut">Start Time:</string>
    <string name="heure_fin">End Time (Automatic)</string>
    <string name="nom_personne">Person\'s Name:</string>
    <string name="numero_telephone">Phone Number:</string>
    <string name="btn_faire_reservation">Make Reservation</string>
    <string name="message_reservation_ok">Reservation saved!</string>
    <string name="message_pas_de_place">Not enough available seats for the reservation.</string>
    <string name="choisir_heure_debut">Choose the start time</string>
    <string name="choisir_heure_fin">End Time (Automatic)</string>
    <string name="listEmpty">This reservation list is empty</string>
    <string name="ChargementReserv">Loading reservations for</string>
    <string name="erreur_date">Please select a date.</string>
    <string name="erreur_places">Please select the number of seats.</string>
    <string name="erreur_heure_debut">Please select the start time.</string>
    <string name="erreur_nom">Please enter a name.</string>
    <string name="erreur_telephone">Please enter a phone number.</string>
    <string name="reservation_number">Reservation Number:</string>
    <string name="telephone_number">Phone Number:</string>
    <string name="heureArrivee">"Arrival time: "</string>
    <string name="heureDepart">"Time to leave: "</string>
</resources>
